fix: image overlap block

--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -736,3 +736,9 @@ svg {
     @apply font-size-8;
   }
 }
+
+.ImageTextOverlapBlock {
+  .RichText ul {
+    padding: 0;
+  }
+}
